# webaric

./: .gitignore  .prettierrc  Cargo.toml  README.md  build.sh  dist.sh  eslint.config.js  eslint.config.ts  package.json  tsconfig.json
spec/support/: jasmine.json
src/: arithmetic.rs  index.html  index.ts  lib.rs  utils.rs  utils.wat  wasmcomp.wat  wasmcomp_fast.wat  webaric.ts  webaric.wat  webaric_fast.wat  webaric_test.ts
tests/: wasmcomp_test.ts  webaric_test.ts
