[package]
name = "wasmcomp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.114"

[profile.release]
lto = true
strip = "debuginfo"

# The wasm profile is used to create reasonably tidy wasm, by inlining code
# where requested, optimizing across build units, and disabling overflow checks.
[profile.wasm]
inherits = "dev"
lto = true
opt-level = 2
overflow-checks = false

[features]
js_debug = []
